Fixing reporting of AMP/previews page load information

AMP page load information is skewed based on checking the wrong event's
foreground state. I am re-versioning the UMA because the new UMA will be
vastly different based on this bug.

This bug applies to previews as well, but the UMA does not need re-versioning.

BUG=703696

Review-Url: https://codereview.chromium.org/2761353002
Cr-Commit-Position: refs/heads/master@{#460014}

Former-commit-id: 5d2208ce695e4352801e8cb2578ea86b22de9707