chrome/browser/page_load_metrics/observers/previews_page_load_metrics_observer.cc
@@ -75,8 +75,8 @@ void PreviewsPageLoadMetricsObserver::OnDomContentLoadedEventStart(
 void PreviewsPageLoadMetricsObserver::OnLoadEventStart(
     const page_load_metrics::PageLoadTiming& timing,
     const page_load_metrics::PageLoadExtraInfo& info) {
-  if (!WasStartedInForegroundOptionalEventInForeground(
-          timing.dom_content_loaded_event_start, info)) {
+  if (!WasStartedInForegroundOptionalEventInForeground(timing.load_event_start,
+                                                       info)) {
     return;
   }
   PAGE_LOAD_HISTOGRAM(internal::kHistogramOfflinePreviewsLoadEventFired,
@@ -86,8 +86,8 @@ void PreviewsPageLoadMetricsObserver::OnLoadEventStart(
 void PreviewsPageLoadMetricsObserver::OnFirstLayout(
     const page_load_metrics::PageLoadTiming& timing,
     const page_load_metrics::PageLoadExtraInfo& info) {
-  if (!WasStartedInForegroundOptionalEventInForeground(
-          timing.dom_content_loaded_event_start, info)) {
+  if (!WasStartedInForegroundOptionalEventInForeground(timing.first_layout,
+                                                       info)) {
     return;
   }
   PAGE_LOAD_HISTOGRAM(internal::kHistogramOfflinePreviewsFirstLayout,
@@ -98,7 +98,7 @@ void PreviewsPageLoadMetricsObserver::OnFirstContentfulPaint(
     const page_load_metrics::PageLoadTiming& timing,
     const page_load_metrics::PageLoadExtraInfo& info) {
   if (!WasStartedInForegroundOptionalEventInForeground(
-          timing.dom_content_loaded_event_start, info)) {
+          timing.first_contentful_paint, info)) {
     return;
   }
   PAGE_LOAD_HISTOGRAM(internal::kHistogramOfflinePreviewsFirstContentfulPaint,
@@ -108,8 +108,8 @@ void PreviewsPageLoadMetricsObserver::OnFirstContentfulPaint(
 void PreviewsPageLoadMetricsObserver::OnParseStart(
     const page_load_metrics::PageLoadTiming& timing,
     const page_load_metrics::PageLoadExtraInfo& info) {
-  if (!WasStartedInForegroundOptionalEventInForeground(
-          timing.dom_content_loaded_event_start, info)) {
+  if (!WasStartedInForegroundOptionalEventInForeground(timing.parse_start,
+                                                       info)) {
     return;
   }
   PAGE_LOAD_HISTOGRAM(internal::kHistogramOfflinePreviewsParseStart,
